Fixed about layout on mobile portrait.

--- a/src/components/about/style.scss
+++ b/src/components/about/style.scss
@@ -53,9 +53,18 @@
 			margin: 2vh 0;
 		}
 
+		:global(.wtf) {
+			border-bottom: 1px solid black;
+			padding-bottom: 3px;
+		}
+
 		h4 {
 			color: black;
 			margin: 1vh 0;
+			white-space: nowrap;
+			@media (max-width: 599px) {
+				margin: 3vh 0;
+			}
 		}
 
 		div {
@@ -74,6 +83,7 @@
 			width: 50%;
 			padding-left: 20px;
 			margin-top: 40px;
+
 		}
 		@media (max-width: 599px) {
 			flex-direction: column;
@@ -90,6 +100,9 @@
 				width: 100%;
 				margin-top: 0;
 				padding: 0;
+					border-top: 1px solid black;
+					padding-top: 3vh;
+					margin-top: 3vh;
 			}
 		}
 	}
